Fixed scrollbar problems related to skill section.

--- a/static/css/sections/skills.css
+++ b/static/css/sections/skills.css
@@ -57,7 +57,7 @@
     padding-right: 0;
   }
   .skills-section .container {
-    max-width: 100%;
+    max-width: 95%;
   }
 }
 
